# SagittaDB

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  security.yml
backend/: .coveragerc  Dockerfile  Dockerfile.bak.1  README.md  alembic.ini  celerybeat-schedule  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_system_config_audit_log.py  0003_fix_totp_secret_length.py  0004_instance_database.py  0005_approval_flow.py  0006_role_usergroup_v2.py  0007_query_priv_v2.py  0008_approval_flow_v2.py  0009_drop_legacy_tables.py  0010_query_priv_apply_flow.py  0011_workflow_template_v1.py  0012_seed_default_workflow_templates.py  0013_user_password_policy.py  0014_query_privilege_revoke_audit.py  0015_backfill_query_privilege_revoke_audit.py  0016_workflow_execution_decision.py  0017_query_log_history_audit.py  0018_backfill_query_log_snapshots.py  0019_session_snapshot.py  0020_slow_query_log.py  0021_slow_query_v2.py  0022_session_collect_config.py  0023_archive_jobs.py  0024_session_duration_ms.py  0025_session_duration_fields.py  0026_submission_risk_plan.py  0027_high_risk_sql_submit_permission.py  0028_archive_execute_permission.py  0029_native_observability.py
backend/app/: celery_app.py  main.py
backend/app/core/: config.py  database.py  deps.py  exceptions.py  logging.py  security.py
backend/app/engines/: cassandra.py  clickhouse.py  doris.py  elasticsearch.py  models.py  mongo.py  mssql.py  mysql.py  oracle.py  pgsql.py  protocol.py  redis.py  registry.py  starrocks.py  tidb.py  utils.py
backend/app/models/: __init__.py  approval_flow.py  archive.py  base.py  instance.py  masking.py  monitor.py  query.py  role.py  session.py  slowlog.py  system.py  user.py  workflow.py
backend/app/routers/: ai.py  approval_flow.py  archive.py  auth.py  binlog.py  diagnostic.py  instance.py  masking.py  monitor.py  optimize.py  query.py  query_priv.py  slowlog.py  system.py  workflow.py
backend/app/schemas/: approval_flow.py  auth.py  common.py  diagnostic.py  instance.py  monitor.py  optimize.py  query.py  risk_plan.py  role.py  slowlog.py  user.py  workflow.py
backend/app/services/: approval_flow.py  archive.py  audit.py  audit_log.py  cancel_policy.py  governance_scope.py  instance.py  instance_database.py  ldap_auth.py  masking.py  masking_rule.py  monitor.py  notify.py  oauth_auth.py  optimize.py  query_guard.py  query_priv.py  risk_plan.py  role.py  rollback.py  session_diagnostic.py  slowlog.py  sms_auth.py  system_config.py  text2sql.py  user.py  workflow.py
backend/app/tasks/: archive.py  execute_sql.py  monitor.py  notify.py
backend/scripts/: migrate_from_archery1x.py  migrate_v1_to_v2.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_api.py  test_health.py  test_instance_api.py  test_workflow_api.py
backend/tests/perf/: locustfile.py
backend/tests/unit/: test_archive_cancel.py  test_archive_starrocks.py  test_auth.py  test_authz_v2_lite.py  test_data_dict_relational.py  test_data_dict_sql_generation.py  test_engine_registry.py  test_execute_sql_task.py  test_instance_router_data_dict.py  test_instance_service.py  test_instance_service_table_ddl.py  test_ldap_auth.py  test_masking.py  test_mongo_engine.py  test_monitor_native.py  test_mysql_engine.py  test_notify.py  test_oauth_auth.py  test_optimize_analyzers.py  test_optimize_service.py  test_oracle_engine.py  test_query_guard.py  test_risk_plan.py  test_rollback.py  test_session_diagnostic.py  test_slowlog_service.py  test_starrocks_engine.py  test_system_config.py  test_user_group_import_export.py  test_workflow_service.py
deploy/: README.md  docker-compose.yml  nginx.conf  update-prod.sh
deploy/backup/: backup-postgres.sh  restore-postgres.sh
deploy/helm/sagittadb/: Chart.yaml  values-prod.yaml  values-staging.yaml  values.yaml
deploy/prometheus/: alertmanager.yml  prometheus.yml
deploy/prometheus/rules/: db_alerts.yml
docs/: deploy_production_env.md  deploy_test_env.md  governance_scope_query_revoke_update.md  packG_test_guide.md  packH_deploy_guide.md  sagittadb_auth_design.md  sagittadb_prd.md  sagittadb_progress.md  sagittadba_auth_redesign_v2.md  slowlog_diagnostic_v2.md
docs/test/: README.md  pack_a_workflow_test.md  pack_b_observability_test.md  pack_c1_system_admin_test.md  pack_c2_instance_database_test.md  pack_d_data_security_test.md  pack_e_engines_archive_test.md  pack_f_third_party_auth_test.md  pack_g_quality_assurance_test.md  pack_h_production_deploy_test.md  sprint0_infrastructure_test.md  sprint1_auth_user_instance_test.md  sprint2_query_engine_test.md  v2_lite_auth_full_validation.md  v2_lite_auth_local_validation.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: approvalFlow.ts  archive.ts  auth.ts  client.ts  diagnostic.ts  instance.ts  optimize.ts  query.ts  slowlog.ts  system.ts  workflow.ts  workflowTemplate.ts
frontend/src/pages/: Placeholder.tsx
frontend/src/store/: auth.ts
frontend/src/styles/: globals.css
(+58 files in other folders)
