[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sagittadb-backend"
version = "2.0.0"
description = "数据库管理平台 2.0 后端"
requires-python = ">=3.12"
dependencies = [
    # Web 框架
    "fastapi~=0.110.0",
    "uvicorn[standard]~=0.27.0",
    "python-multipart~=0.0.9",
    # ORM & 数据库
    "sqlalchemy~=2.0",
    "alembic~=1.13",
    "asyncpg~=0.29.0",       # PostgreSQL async driver
    "psycopg2-binary~=2.9",  # PostgreSQL sync driver (Alembic)
    # 数据验证
    "pydantic~=2.6",
    "pydantic-settings~=2.2",
    # 安全 & 认证（版本变动可能破坏哈希/加密行为，约束到 minor）
    "python-jose[cryptography]~=3.3.0",
    "bcrypt~=4.0",
    "passlib[bcrypt]~=1.7.4",
    "cryptography~=42.0",
    "pyotp~=2.9",
    "ldap3~=2.9",
    # Redis
    "redis[hiredis]~=5.0",
    # 异步任务
    "celery~=5.3",
    "flower~=2.0",
    # SQL 解析（替代 goInception）
    "sqlglot~=23.0",
    # HTTP 客户端（内部 API 调用）
    "httpx~=0.27.0",
    # 对象存储
    "aioboto3~=12.3",
    # 数据库引擎驱动
    "aiomysql~=0.2.0",
    "pymysql~=1.1",
    "pymongo~=4.6",
    "motor~=3.3",
    "aioredis~=2.0",
    "clickhouse-driver~=0.2.7",
    "oracledb~=2.2",
    "python-tds~=1.16",
    "elasticsearch[async]~=8.12",
    "cassandra-driver~=3.29",
    # OpenTelemetry 可观测性
    "opentelemetry-api~=1.23",
    "opentelemetry-sdk~=1.23",
    "opentelemetry-instrumentation-fastapi>=0.44b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.44b0",
    "opentelemetry-exporter-prometheus>=0.44b0",
    # 结构化日志
    "structlog~=24.1",
    # AI 能力（可选）
    "anthropic~=0.20",
    "openai~=1.13",
    # 工具
    "python-dotenv~=1.0",
    "arrow~=1.3",
    "jinja2~=3.1",
    "openpyxl~=3.1",
]
# 生产部署建议：使用 `uv lock` 或 `pip-compile requirements.in` 生成精确 lock file，
# 将其提交到版本控制，保证不同时间、不同机器的构建完全一致。

[project.optional-dependencies]
oracle = [
    "oracledb~=2.2",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",              # TestClient
    "factory-boy>=3.3.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "B008", "N818"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
